@@ -1,3 +1,9 @@
+2026-01-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-completion-handle-file-name-all-completions):
+	Keep `tramp-default-method{-alist}' in order to get completion
+	functions for `tramp-default-method-marker'.
+
 2025-12-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.8.1 released
